# resist

./: CMakeLists.txt  README.md
src/: .ResistKernelGPU.cpp.swp  ResistKernelC.cpp  ResistKernelGPU.cpp  hunter.env
